2017-07-19  Volker Reichelt  <v.reichelt@netcologne.de>

	* libsupc++/new (bad_array_new_length): Remove redundant
	semicolon after in-class member function definition.
	* include/bits/locale_facets.h (ctype_byname, num_put): Likewise.
	* include/bits/locale_facets_nonio.h (time_put_byname): Likewise.
	* include/bits/random.h (mersenne_twister_engine): Likewise.
	* include/tr1/random.h (mersenne_twister): Likewise
	* include/ext/random (simd_fast_mersenne_twister_engine): Likewise.
	* include/ext/rope (char_producer, _Rope_char_consumer,
	_Rope_self_destruct_ptr, _Rope_const_iterator, _Rope_iterator):
	Likewise.
	* include/ext/ropeimpl.h (_Rope_flatten_char_consumer,
	_Rope_insert_char_consumer): Likewise.

2017-07-19  Jonathan Wakely  <jwakely@redhat.com>

	* include/bits/fstream.tcc (basic_filebuf::xsgetn)
	(basic_filebuf::xsputn, basic_filebuf::seekoff): Fix indentation.

	* testsuite/util/testsuite_iterators.h: Fix indentation.

	* testsuite/27_io/basic_filebuf/sgetn/char/81395.cc: Add dg-require.

2017-07-18  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/81395
	* include/bits/fstream.tcc (basic_filebuf::xsgetn): Don't set buffer
	pointers for write mode after reading.
	* testsuite/27_io/basic_filebuf/sgetn/char/81395.cc: New.

2017-07-18  François Dumont  <fdumont@gcc.gnu.org>

	* include/bits/stl_list.h
	(struct _List_node_header): New.
	(_List_impl()): Fix noexcept qualification.
	(_List_impl(_List_impl&&)): New, default.
	(_List_base()): Default.
	(_List_base(_List_base&&)): Default.
	(_List_base::_M_move_nodes): Adapt to use
	_List_node_header._M_move_nodes.
	(_List_base::_M_init): Likewise.
	(list<>()): Default.
	(list<>(list&&)): Default.
	(list<>::_M_move_assign(list&&, true_type)): Use _M_move_nodes.
	(__distance(_List_const_iterator<>, _List_const_iterator<>,
	input_iterator_tag)): Adapt.
	* testsuite/23_containers/list/allocator/default_init.cc: New.

2017-07-15  Jonathan Wakely  <jwakely@redhat.com>
